Clicking on a project takes you to its features page

--- a/packages/ui/src/app/pages/projects/projects.component.html
+++ b/packages/ui/src/app/pages/projects/projects.component.html
@@ -1,5 +1,9 @@
 <ul>
   @for (project of projects(); track $index) {
-    <li>ID: {{ project.id }}, Name: {{ project.name }}</li>
+    <li>
+      <a routerLink="{{ paths.toProjectFeatures(project.id) }}">{{
+        project.name
+      }}</a>
+    </li>
   }
 </ul>
