--- a/packages/ui/src/app/pages/projects/projects.component.html
+++ b/packages/ui/src/app/pages/projects/projects.component.html
@@ -1,3 +1,6 @@
+<button mat-icon-button color="primary" (click)="openCreateProjectDialog()">
+  <mat-icon>add</mat-icon>
+</button>
 <ul>
   @for (project of projects(); track $index) {
     <li>
