--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -7,7 +7,10 @@
   }
 </ul>
 
-<p>Features</p>
+<button mat-fab extended color="primary" (click)="openCreateFeatureDialog()">
+  <mat-icon>add</mat-icon>
+  Feature
+</button>
 <table
   mat-table
   [dataSource]="features()"
