--- a/packages/ui/src/app/pages/project-features/project-features.component.html
+++ b/packages/ui/src/app/pages/project-features/project-features.component.html
@@ -6,7 +6,7 @@
         <div>Environments</div>
         <ul>
           @for (env of feature.environments; track $index) {
-            <li>"{{ env.name }}" | {{ env.isEnabled }}</li>
+            <li>"{{ env.environment.name }}" | {{ env.isEnabled }}</li>
           }
         </ul>
       </div>
