Added 'Add Environment' dialog

--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -1,4 +1,12 @@
-<p>Environments</p>
+<button
+  mat-fab
+  extended
+  color="primary"
+  (click)="openCreateEnvironmentDialog()"
+>
+  <mat-icon>add</mat-icon>
+  Environment
+</button>
 <ul>
   @for (env of environments(); track env.id) {
     <li>
