--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -1,53 +1,63 @@
-<button
-  mat-fab
-  extended
-  color="primary"
-  (click)="openCreateEnvironmentDialog()"
->
-  <mat-icon>add</mat-icon>
-  Environment
-</button>
-<ul>
-  @for (env of environments(); track env.id) {
-    <li>
-      {{ env.name }}
-    </li>
-  }
-</ul>
+<mat-tab-group>
+  <mat-tab label="Features">
+    <button
+      mat-fab
+      extended
+      color="primary"
+      (click)="openCreateFeatureDialog()"
+    >
+      <mat-icon>add</mat-icon>
+      Feature
+    </button>
+    <table
+      mat-table
+      [dataSource]="features()"
+      aria-describedby="Table of features and their environment states"
+    >
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let feature">{{ feature.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="created">
+        <th mat-header-cell *matHeaderCellDef>Created</th>
+        <td mat-cell *matCellDef="let feature">
+          {{ feature.createdAt | date: 'mediumDate' }}
+        </td>
+      </ng-container>
+      @for (env of environments(); track env.id) {
+        <ng-container matColumnDef="{{ env.name }}">
+          <th mat-header-cell *matHeaderCellDef>{{ env.name }}</th>
+          <td mat-cell *matCellDef="let feature">
+            <mat-slide-toggle
+              id="{{ feature.id }}-{{ env.id }}-toggle"
+              hideIcon="true"
+              (change)="toggleFeature(feature, env)"
+              [checked]="findEnvironment(feature, env)!.isEnabled"
+            ></mat-slide-toggle>
+          </td>
+        </ng-container>
+      }
 
-<button mat-fab extended color="primary" (click)="openCreateFeatureDialog()">
-  <mat-icon>add</mat-icon>
-  Feature
-</button>
-<table
-  mat-table
-  [dataSource]="features()"
-  aria-describedby="Table of features and their environment states"
->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let feature">{{ feature.name }}</td>
-  </ng-container>
-  <ng-container matColumnDef="created">
-    <th mat-header-cell *matHeaderCellDef>Created</th>
-    <td mat-cell *matCellDef="let feature">
-      {{ feature.createdAt | date: 'mediumDate' }}
-    </td>
-  </ng-container>
-  @for (env of environments(); track env.id) {
-    <ng-container matColumnDef="{{ env.name }}">
-      <th mat-header-cell *matHeaderCellDef>{{ env.name }}</th>
-      <td mat-cell *matCellDef="let feature">
-        <mat-slide-toggle
-          id="{{ feature.id }}-{{ env.id }}-toggle"
-          hideIcon="true"
-          (change)="toggleFeature(feature, env)"
-          [checked]="findEnvironment(feature, env)!.isEnabled"
-        ></mat-slide-toggle>
-      </td>
-    </ng-container>
-  }
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </mat-tab>
+  <mat-tab label="Environments">
+    <button
+      mat-fab
+      extended
+      color="primary"
+      (click)="openCreateEnvironmentDialog()"
+    >
+      <mat-icon>add</mat-icon>
+      Environment
+    </button>
+    <ul>
+      @for (env of environments(); track env.id) {
+        <li>
+          {{ env.name }}
+        </li>
+      }
+    </ul>
+  </mat-tab>
+</mat-tab-group>
