--- a/packages/ui/src/app/components/header/header.component.html
+++ b/packages/ui/src/app/components/header/header.component.html
@@ -7,8 +7,11 @@
     <a mat-icon-button>
       <mat-icon>settings</mat-icon>
     </a>
-    <a mat-icon-button>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>account_circle</mat-icon>
-    </a>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="handleLogout()">Logout</button>
+    </mat-menu>
   </div>
 </mat-toolbar>
