--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -42,6 +42,41 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </mat-tab>
+
+  <mat-tab label="API Tokens">
+    <table
+      mat-table
+      [dataSource]="apiTokens()"
+      aria-describedby="Table of api tokens"
+    >
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let apiToken">{{ apiToken.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="created">
+        <th mat-header-cell *matHeaderCellDef>Created</th>
+        <td mat-cell *matCellDef="let apiToken">
+          {{ apiToken.createdAt | date: 'mediumDate' }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>Type</th>
+        <td mat-cell *matCellDef="let apiToken">{{ apiToken.type }}</td>
+      </ng-container>
+      <ng-container matColumnDef="copy">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let apiToken">
+          <button mat-icon-button [cdkCopyToClipboard]="apiToken.id">
+            <mat-icon>content_copy</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="apiTokenColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: apiTokenColumns"></tr>
+    </table>
+  </mat-tab>
+
   <mat-tab label="Environments">
     <button
       mat-fab
