Create 'Add API Token' button

--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -44,6 +44,15 @@
   </mat-tab>
 
   <mat-tab label="API Tokens">
+    <button
+      mat-fab
+      extended
+      color="primary"
+      (click)="openCreateApiTokenDialog()"
+    >
+      <mat-icon>add</mat-icon>
+      API Token
+    </button>
     <table
       mat-table
       [dataSource]="apiTokens()"
