--- a/packages/ui/src/app/pages/projects/projects.component.html
+++ b/packages/ui/src/app/pages/projects/projects.component.html
@@ -2,10 +2,19 @@
   <mat-icon>add</mat-icon>
   Project
 </button>
-<ul>
-  @for (project of projects(); track $index) {
-    <li>
+<table mat-table [dataSource]="projects()" aria-describedby="Table of projects">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let project">
       <a routerLink="{{ paths.toProject(project.id) }}">{{ project.name }}</a>
-    </li>
-  }
-</ul>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="createdAt">
+    <th mat-header-cell *matHeaderCellDef>Created</th>
+    <td mat-cell *matCellDef="let project">
+      {{ project.createdAt | date: 'mediumDate' }}
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
