--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -37,9 +37,22 @@
           </td>
         </ng-container>
       }
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let feature">
+          <button
+            [disabled]="deleteFeatureInFlight"
+            mat-icon-button
+            color="warn"
+            (click)="deleteFeature(feature)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="featureColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: featureColumns"></tr>
     </table>
   </mat-tab>
 
