--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -124,6 +124,20 @@
           {{ environment.createdAt | date: 'mediumDate' }}
         </td>
       </ng-container>
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let environment">
+          <button
+            [disabled]="deleteEnvironmentInFlight"
+            mat-icon-button
+            color="warn"
+            (click)="deleteEnvironment(environment)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="envColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: envColumns"></tr>
     </table>
