--- a/packages/ui/src/app/pages/project/project.component.html
+++ b/packages/ui/src/app/pages/project/project.component.html
@@ -93,6 +93,19 @@
           </button>
         </td>
       </ng-container>
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let apiToken">
+          <button
+            [disabled]="deleteApiTokenInFlight"
+            mat-icon-button
+            color="warn"
+            (click)="deleteApiToken(apiToken)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="apiTokenColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: apiTokenColumns"></tr>
