Created users page, lists all users

--- a/packages/ui/src/app/components/header/header.component.html
+++ b/packages/ui/src/app/components/header/header.component.html
@@ -2,6 +2,7 @@
   <div class="left">
     <a mat-stroked-button color="primary"> FToggle </a>
     <a mat-button routerLink="{{ paths.projects }}"> Projects </a>
+    <a mat-button routerLink="{{ paths.users }}">Users</a>
   </div>
   <div class="right">
     <a mat-icon-button>
