--- a/packages/ui/src/app/pages/users/users-page.component.html
+++ b/packages/ui/src/app/pages/users/users-page.component.html
@@ -5,6 +5,12 @@
       {{ user.username }}
     </td>
   </ng-container>
+  <ng-container matColumnDef="roles">
+    <th mat-header-cell *matHeaderCellDef>Roles</th>
+    <td mat-cell *matCellDef="let user">
+      {{ getUsersRoleNames(user) }}
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
