--- a/packages/ui/src/app/pages/users/users-page.component.html
+++ b/packages/ui/src/app/pages/users/users-page.component.html
@@ -22,6 +22,15 @@
       </mat-chip-set>
     </td>
   </ng-container>
+  <ng-container matColumnDef="approval">
+    <th mat-header-cell *matHeaderCellDef>Is Approved</th>
+    <td mat-cell *matCellDef="let user">
+      <mat-checkbox
+        [checked]="user.isApproved"
+        (change)="onApprovalChange(user, $event.checked)"
+      ></mat-checkbox>
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
