Disable checkbox for admin user

--- a/packages/ui/src/app/pages/users/users-page.component.html
+++ b/packages/ui/src/app/pages/users/users-page.component.html
@@ -28,6 +28,7 @@
       <mat-checkbox
         [checked]="user.isApproved"
         (change)="onApprovalChange(user, $event.checked)"
+        [disabled]="user.username === 'Admin'"
       ></mat-checkbox>
     </td>
   </ng-container>
