UI to add a context field to a project

--- a/packages/ui/src/app/pages/project/components/context-fields/context-fields.component.html
+++ b/packages/ui/src/app/pages/project/components/context-fields/context-fields.component.html
@@ -1,3 +1,12 @@
+<button
+  mat-fab
+  extended
+  color="primary"
+  (click)="openCreateContextFieldDialog()"
+>
+  <mat-icon>add</mat-icon>
+  Context Field
+</button>
 <table
   mat-table
   [dataSource]="contextFields"
