--- a/packages/ui/src/app/pages/project/components/features/features.component.html
+++ b/packages/ui/src/app/pages/project/components/features/features.component.html
@@ -10,10 +10,9 @@
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let feature">
-      <a
-        routerLink="{{ paths.toProjectConditions(projectId, feature.name) }}"
-        >{{ feature.name }}</a
-      >
+      <a routerLink="{{ paths.toProjectConditions(projectId, feature.id) }}">{{
+        feature.name
+      }}</a>
     </td>
   </ng-container>
   <ng-container matColumnDef="created">
