--- a/packages/ui/src/app/pages/project/conditions/conditions.component.html
+++ b/packages/ui/src/app/pages/project/conditions/conditions.component.html
@@ -1,1 +1,46 @@
-<p>conditions works!</p>
+<mat-accordion>
+  @for (env of environments(); track env.id) {
+    <mat-expansion-panel
+      hideToggle
+      [expanded]="panel === env.name"
+      (opened)="setPanel(env)"
+    >
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          {{ env.name }}
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-panel-description>
+        @for (condition of conditions(); track condition.id) {
+          <table
+            mat-table
+            [dataSource]="conditions()"
+            aria-describedby="Table of conditions for the features specific environment"
+          >
+            <ng-container matColumnDef="field">
+              <th mat-header-cell *matHeaderCellDef>Context Field</th>
+              <td mat-cell *matCellDef="let condition">
+                {{ condition.contextField.name }}
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="operator">
+              <th mat-header-cell *matHeaderCellDef>Operator</th>
+              <td mat-cell *matCellDef="let condition">
+                {{ condition.operator }}
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="values">
+              <th mat-header-cell *matHeaderCellDef>values</th>
+              <td mat-cell *matCellDef="let condition">
+                {{ condition.values }}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="conditionColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: conditionColumns"></tr>
+          </table>
+        }
+      </mat-panel-description>
+    </mat-expansion-panel>
+  }
+</mat-accordion>
