--- a/packages/ui/src/app/pages/project/conditions/conditions.component.html
+++ b/packages/ui/src/app/pages/project/conditions/conditions.component.html
@@ -10,36 +10,43 @@
           {{ env.name }}
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-panel-description>
-        @for (condition of conditions(); track condition.id) {
-          <table
-            mat-table
-            [dataSource]="conditions()"
-            aria-describedby="Table of conditions for the features specific environment"
-          >
-            <ng-container matColumnDef="field">
-              <th mat-header-cell *matHeaderCellDef>Context Field</th>
-              <td mat-cell *matCellDef="let condition">
-                {{ condition.contextField.name }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="operator">
-              <th mat-header-cell *matHeaderCellDef>Operator</th>
-              <td mat-cell *matCellDef="let condition">
-                {{ condition.operator }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="values">
-              <th mat-header-cell *matHeaderCellDef>values</th>
-              <td mat-cell *matCellDef="let condition">
-                {{ condition.values }}
-              </td>
-            </ng-container>
+      <mat-panel-description style="flex-direction: column">
+        <button
+          mat-fab
+          extended
+          color="primary"
+          (click)="openCreateConditionDialog(env)"
+        >
+          <mat-icon>add</mat-icon>
+          Condition
+        </button>
+        <table
+          mat-table
+          [dataSource]="conditions()"
+          aria-describedby="Table of conditions for the features specific environment"
+        >
+          <ng-container matColumnDef="field">
+            <th mat-header-cell *matHeaderCellDef>Context Field</th>
+            <td mat-cell *matCellDef="let condition">
+              {{ condition.contextField.name }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="operator">
+            <th mat-header-cell *matHeaderCellDef>Operator</th>
+            <td mat-cell *matCellDef="let condition">
+              {{ condition.operator }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="values">
+            <th mat-header-cell *matHeaderCellDef>values</th>
+            <td mat-cell *matCellDef="let condition">
+              {{ condition.values }}
+            </td>
+          </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="conditionColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: conditionColumns"></tr>
-          </table>
-        }
+          <tr mat-header-row *matHeaderRowDef="conditionColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: conditionColumns"></tr>
+        </table>
       </mat-panel-description>
     </mat-expansion-panel>
   }
