--- a/packages/ui/src/app/pages/project/conditions/conditions.component.html
+++ b/packages/ui/src/app/pages/project/conditions/conditions.component.html
@@ -43,6 +43,19 @@
               {{ condition.values }}
             </td>
           </ng-container>
+          <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let condition">
+              <button
+                [disabled]="deleteConditionInFlight()"
+                mat-icon-button
+                color="warn"
+                (click)="deleteCondition(condition)"
+              >
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="conditionColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: conditionColumns"></tr>
