Using 'environment.name' instead of 'environment.id'

--- a/packages/ui/src/app/pages/project/conditions/conditions.component.html
+++ b/packages/ui/src/app/pages/project/conditions/conditions.component.html
@@ -50,7 +50,7 @@
                 [disabled]="deleteConditionInFlight()"
                 mat-icon-button
                 color="warn"
-                (click)="deleteCondition(condition)"
+                (click)="deleteCondition(condition, env)"
               >
                 <mat-icon>delete</mat-icon>
               </button>
