Show value when operator is single value op

--- a/packages/ui/src/app/pages/project/conditions/conditions.component.html
+++ b/packages/ui/src/app/pages/project/conditions/conditions.component.html
@@ -40,7 +40,11 @@
           <ng-container matColumnDef="values">
             <th mat-header-cell *matHeaderCellDef>values</th>
             <td mat-cell *matCellDef="let condition">
-              {{ condition.values }}
+              {{
+                singleValueOperators.includes(condition.operator)
+                  ? condition.value
+                  : condition.values
+              }}
             </td>
           </ng-container>
           <ng-container matColumnDef="delete">
