--- a/packages/ui/src/app/components/create-condition-dialog/create-condition-dialog.component.html
+++ b/packages/ui/src/app/components/create-condition-dialog/create-condition-dialog.component.html
@@ -27,36 +27,11 @@
         <mat-error>Operator is required</mat-error>
       }
     </mat-form-field>
-    @if (singleValueOperators.includes(operator.value ?? Operators.LESS_THAN)) {
-      <mat-form-field>
-        <mat-label>Value</mat-label>
-        <input matInput id="value" placeholder="value" [formControl]="value" />
-        @if (value.hasError('required')) {
-          <mat-error>Value is required</mat-error>
-        }
-      </mat-form-field>
-    } @else {
-      <mat-form-field>
-        <mat-label>Values</mat-label>
-        <input
-          [matChipInputFor]="valuesGrid"
-          (matChipInputTokenEnd)="addValue($event)"
-        />
-        <mat-chip-grid #valuesGrid [formControl]="values">
-          @for (value of values.value; track value) {
-            <mat-chip-row (removed)="removeValue(value)" id="values">
-              {{ value }}
-              <button matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip-row>
-          }
-        </mat-chip-grid>
-        @if (values.hasError('required')) {
-          <mat-error>At least one value is required</mat-error>
-        }
-      </mat-form-field>
-    }
+    <app-operator-input-field
+      [operator]="operator.value"
+      [value]="value"
+      [values]="values"
+    />
     <mat-form-field id="descriptionFormField">
       <mat-label>Description</mat-label>
       <input
