--- a/packages/ui/src/app/components/create-condition-dialog/create-condition-dialog.component.html
+++ b/packages/ui/src/app/components/create-condition-dialog/create-condition-dialog.component.html
@@ -16,19 +16,9 @@
         <mat-error>Context field is required</mat-error>
       }
     </mat-form-field>
-    <mat-form-field id="operatorFormField">
-      <mat-label>Operator</mat-label>
-      <mat-select id="operator" [formControl]="operator">
-        @for (operator of operators; track operator) {
-          <mat-option [value]="operator">{{ operator }}</mat-option>
-        }
-      </mat-select>
-      @if (operator.hasError('required')) {
-        <mat-error>Operator is required</mat-error>
-      }
-    </mat-form-field>
     <app-operator-input-field
-      [operator]="operator.value"
+      [contextFieldName]="contextName.value"
+      [operator]="operator"
       [value]="value"
       [values]="values"
     />
